--- a/index.html
+++ b/index.html
@@ -5,19 +5,10 @@
 -->
 </style>
 	<body>
-		<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
-		</script>
-		<script type="text/javascript">
-			_uacct = "UA-1904830-1";
-			urchinTracker();
-		</script>
+
 		
 <head>
-	<title>You are an idiot</title>
-	<meta name="description" content="You are an idiot - Funny flash">
-	<meta name="keywords" content="fun, flash, idiot, games, pivpiv, whine, hot, big, free, dating, cars, conference calling, cheap auto insurance, laptop data recovery, mortgage loan"
-	<meta name="robots" content="all">
-	<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+	<title>maybe you meant to go to a different page.</title>
 </head>
 
 
@@ -47,9 +38,7 @@
 
 <p>
 
-<g:plusone size="tall"></g:plusone>
-<br>
-Hey, give a +1 ! :-D
+
 <p>
 
 <p>
