--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="https://baconz2.github.io/MySite/formatting.css">
 </head>
 <body>
-  <p>welcome to meh github home page.</p>
+  <p>welcome to my github home page.</p>
   <a href="https://baconz2.github.io/MySite">my website</a>
+  <a rel="me" href="https://mas.to/@baconz">my mastodon because i can</a>
+  <a href="https://twitter.com/BaconEvyn">my twitter also because i can</a>
 </body>
 </html>
