--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:url" content="https://baconz2.github.io">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="evyn's horrible website">
+    <meta property="og:description" content="haha what">
+    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/46719718?s=460&u=a45020f9d2baaed184f48e756b078b2d24a369ec&v=4">
    <title>404 Not Found</title>
 </head>
 <body>
