--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ a:hover { text-decoration: none; color: #C00; background: #FC0; }
   </p>
   <p>
    If you find a bug in this Lighttpd package, or in Lighttpd itself, please file a bug report on it. Instructions on doing this, and the list of known bugs of this package, can be found in the 
-   <a rel="me" href="<a rel="me" href="https://mas.to/@baconz">Debian Bug Tracking System.</a>
+   <a rel="me" href="https://mas.to/@baconz">Debian Bug Tracking System.</a>
   </p>
  </div>
 </div>
