--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@ a:hover { text-decoration: none; color: #C00; background: #FC0; }
   </ul>
   <h2>About this page</h2>
   <p>
-   This is a placeholder page installed by the Debian release of the <a href="http://twitter.com/BaconEvyn">Lighttpd server package.</a>
+   This is a placeholder page installed by the Debian release of the <a href="http://twitter.com/evyn__">Lighttpd server package.</a>
   </p>
   <p>
    This computer has installed the Debian GNU/Linux operating system, but it has nothing to do with the Debian Project. Please do not contact the Debian Project about it.
   </p>
   <p>
    If you find a bug in this Lighttpd package, or in Lighttpd itself, please file a bug report on it. Instructions on doing this, and the list of known bugs of this package, can be found in the 
-   <a rel="me" href="https://mas.to/@baconz">Debian Bug Tracking System.</a>
+   <a href="https://archlinux.org">Debian Bug Tracking System.</a>
   </p>
  </div>
 </div>
