--- a/gay.html
+++ b/gay.html
@@ -1,2 +1,18 @@
-<!DOCTYPE HTML>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/6jQkxsEbnS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>about:blank</title>
+    </head>
+    <style>
+        .video {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%; 
+            min-height: 100%;
+        }
+    </style>
+    <body>
+        <iframe class="video" width="100%" height="100%" src="https://www.youtube.com/embed/6jQkxsEbnS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </body>
+</html>
