haha funi stem profl
and different meta stuff

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta property="og:url" content="https://baconz2.github.io">
 <meta property="og:type" content="article">
 <meta property="og:title" content="evyn's website">
-<meta property="og:description" content="it's not the greatest but hey, it works">
+<meta property="og:description" content="oops, all shit">
 <meta property="og:image" content="https://avatars0.githubusercontent.com/u/46719718?s=460&u=a45020f9d2baaed184f48e756b078b2d24a369ec&v=4">
 <title>evyn's website</title>
 <style>
@@ -42,5 +42,6 @@ a {
 	<pre></pre>
 	<a href="https://twitter.com/evyn__">twitter</a>
 	<a href="https://soundcloud.com/evynhh">soundcloud</a>
+	<a href="https://steamcommunity.com/id/evyndiscord/">steam</a>
 </body>
 </html>
