--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@ a {
 	<pre></pre>
 	<a href="https://twitter.com/evyn__">twitter</a>
 	<a href="https://soundcloud.com/evynhh">soundcloud</a>
-	<a href="https://steamcommunity.com/id/evyndiscord/">steam</a>
+	<a href="https://steamcommunity.com/id/evynhh/">steam</a>
 </body>
 </html>
