--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ a {
 	<img class="center" height=20% width=20% src="https://avatars0.githubusercontent.com/u/46719718?s=460&u=a45020f9d2baaed184f48e756b078b2d24a369ec&v=4" alt="profile picture on github"> 
 	<p>links:</p>
 	<pre></pre>
-	<a href="https://twitter.com/evyn__">twitter</a>
+	<a rel="me" href="https://mas.to/@evynhh">mastodon</a>
 	<a href="https://soundcloud.com/evynhh">soundcloud</a>
 	<a href="https://steamcommunity.com/id/evynhh/">steam</a>
 </body>
