--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@ a {
 	<a rel="me" href="https://mas.to/@evynhh">mastodon</a>
 	<a href="https://soundcloud.com/evynhh">soundcloud</a>
 	<a href="https://steamcommunity.com/id/evynhh/">steam</a>
+	<a href="https://t.me/evynhh/">telegram</a>
 </body>
 </html>
