--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@ a {
 	<a href="https://soundcloud.com/evynhh">soundcloud</a>
 	<a href="https://steamcommunity.com/id/evynhh/">steam</a>
 	<a href="https://t.me/evynhh/">telegram</a>
+	<a href="https://last.fm/user/evynhh">last.fm</a>
 </body>
 </html>
