--- a/index.html
+++ b/index.html
@@ -1,49 +1,55 @@
-<!DOCTYPE HTML>
-<meta property="og:url" content="https://baconz2.github.io">
-<meta property="og:type" content="article">
-<meta property="og:title" content="evyn's website">
-<meta property="og:description" content="oops, all shit">
-<meta property="og:image" content="https://avatars0.githubusercontent.com/u/46719718?s=460&u=a45020f9d2baaed184f48e756b078b2d24a369ec&v=4">
-<title>evyn's website</title>
-<style>
-@font-face {
-	font-family: biotif;
-	src: url(https://baconz2.github.io/biotif.ttf);
-}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<head>
+	<meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8"/>
+	<meta name="og:url" content="https://baconz2.github.io"/>
+	<meta name="og:type" content="article"/>
+	<meta name="og:title" content="evyn's website"/>
+	<meta name="og:description" content="oops, all shit"/>
+	<meta name="og:image" content="https://avatars0.githubusercontent.com/u/46719718?s=460&u=a45020f9d2baaed184f48e756b078b2d24a369ec&v=4"/>
+	<title>evyn's website</title>
+	<style type="text/css">
+	@font-face {
+		font-family: biotif;
+		src: url(https://baconz2.github.io/biotif.ttf);
+	}
 
-body {
-	background: #000000;
-}
+	body {
+		background-color: black;
+		color: white;
+		font-family: biotif;
+	}
 
-IMG.center {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
+	img.avatar {
+		display: block;
+		margin: auto;
+		border-radius: 10%;
+	}
 
-p {
-	font-family: biotif;
-	color: #ffffff;
-	text-align: center;
-}
+	a {
+		color: white;
+	}
 
-a {
-	font-family: biotif;
-	color: #ffffff;
-	display: block;
-	text-align: center;
-}
 </style>
-<html>
+</head>
 <body>
-	<p>evyn's really bad website</p>
-	<img class="center" height=20% width=20% src="https://avatars0.githubusercontent.com/u/46719718?s=460&u=a45020f9d2baaed184f48e756b078b2d24a369ec&v=4" alt="profile picture on github"> 
-	<p>links:</p>
-	<pre></pre>
+	<div style="text-align:center;">
+	<h1>evyn's really bad website</h1>
+	<img class="avatar" height="320px" width="320px" src="https://avatars0.githubusercontent.com/u/46719718?s=460&u=a45020f9d2baaed184f48e756b078b2d24a369ec&v=4" alt="Lain from Serial Experiments Lain in her bear suit."/> 
+	<h2>links:</h2>
+	<p>XMPP/email: baconz at disroot dot org</p>
+	<p>
 	<a rel="me" href="https://mas.to/@evynhh">mastodon</a>
+	<br/>
 	<a href="https://soundcloud.com/evynhh">soundcloud</a>
+	<br/>
 	<a href="https://steamcommunity.com/id/evynhh/">steam</a>
+	<br/>
 	<a href="https://t.me/evynhh/">telegram</a>
+	<br/>
 	<a href="https://last.fm/user/evynhh">last.fm</a>
+	</p>
+	</div>
 </body>
 </html>
+
