--- a/index.html
+++ b/index.html
@@ -6,31 +6,9 @@
 	<meta name="og:type" content="article"/>
 	<meta name="og:title" content="evyn's website"/>
 	<meta name="og:description" content="oops, all shit"/>
+	<link rel="stylesheet" type="text/css" href="src/index.css">
 	<meta name="og:image" content="https://avatars0.githubusercontent.com/u/46719718?s=460&u=a45020f9d2baaed184f48e756b078b2d24a369ec&v=4"/>
 	<title>evyn's website</title>
-	<style type="text/css">
-	@font-face {
-		font-family: biotif;
-		src: url(https://baconz2.github.io/biotif.ttf);
-	}
-
-	body {
-		background-color: black;
-		color: white;
-		font-family: biotif;
-	}
-
-	img.avatar {
-		display: block;
-		margin: auto;
-		border-radius: 10%;
-	}
-
-	a {
-		color: white;
-	}
-
-</style>
 </head>
 <body>
 	<div style="text-align:center;">
